Inspector: Fixed CSS to make the remote debugger detach reason visible
The bug was introduced in https://bugs.webkit.org/show_bug.cgi?id=112399 when migrating from display: -webkit-box to -webkit-flex.

BUG=246163

Review URL: https://chromiumcodereview.appspot.com/17491004

git-svn-id: svn://svn.chromium.org/blink/trunk@152881 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/helpScreen.css
+++ b/front_end/helpScreen.css
@@ -35,7 +35,6 @@
     overflow-y: auto;
     overflow-x: hidden;
     scrollbar-width: 11px;
-    -webkit-flex: 1;
     margin: 8px;
     padding: 0 4px;
     font-size: 13px;
